Fix spacing from admin header

--- a/app/assets/stylesheets/common/_header.css.scss
+++ b/app/assets/stylesheets/common/_header.css.scss
@@ -52,6 +52,12 @@
   }
 }
 
+.admin_dashboard{
+  .header{
+    margin-bottom: 30px;
+  }
+}
+
 .header{
   .header-nav{
     a{
